[GTK] Fails to build with freetype 2.5.1 https://bugs.webkit.org/show_bug.cgi?id=125074

Patch by Andres Gomez <agomez@igalia.com> on 2013-12-02
Reviewed by Carlos Garcia Campos.

FreeType specifies a canonical way of including their own
headers. Now, we are following this recommendation so the
compilation won't be broken again due to an upgrade in FeeType's
including paths.

* platform/graphics/freetype/FontPlatformDataFreeType.cpp:
* platform/graphics/freetype/SimpleFontDataFreeType.cpp:
* platform/graphics/harfbuzz/HarfBuzzFaceCairo.cpp:

Canonical link: https://commits.webkit.org/143182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159939 268f45cc-cd09-0410-ab3c-d52691b4dbfc